--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
     font-family: 'Roboto', sans-serif;
 }
 
+body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
 nav {
     height: 80px;
     display: flex
@@ -13,7 +18,13 @@ nav {
 
 img {
     width: 100%;
+    height: 100%;
+    max-height: 50vh;
+    padding: 20px
+}
 
+p {
+    line-height: 1.5;
 }
 
 .nav__container {
@@ -76,10 +87,19 @@ header {
     width: 100%;
     max-width: 720px;
     margin: 0 auto;
+    padding: 20px;
     height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
 }
+
+.header__description {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 
 h1 {
     font-size: 56px;
@@ -95,4 +115,118 @@ h2 {
     text-align: center;
 }
 
-/* 14:26 */
+button {
+    cursor: pointer;
+}
+
+button:active {
+    transform: translateY(1px);
+} 
+
+.btn {
+    background-color: #7342d6;
+    color: white;
+    padding: 12px 24px;
+    border-radius: 4px;
+    border: none;
+}
+
+.header__img--wrapper {
+    padding: 20px;
+    z-index: 2;
+}
+
+.container {
+    padding: 56px 0;
+
+}
+
+.row {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+
+}
+
+
+/* HIGHLIGHTS */
+
+#highlights {
+    position: relative;
+}
+
+#highlights:before {
+    background: url('./assets/wave.svg');
+    position: absolute;
+    content: "";
+    width: 101vw;
+    height: 12vw;
+    top: 1px;
+    left: 0;
+    z-index: 1;
+    background-size: cover;
+    background-repeat: no-repeat;
+    transform: translateY(-100%);
+}
+
+#highlights:after {
+    background: url('./assets/wave.svg');
+    position: absolute;
+    content: "";
+    width: 101vw;
+    height: 12vw;
+    bottom: 1px;
+    left: 0;
+    z-index: 1;
+    background-size: cover;
+    background-repeat: no-repeat;
+    transform: translateY(100%) rotate(180deg);
+}
+
+
+.highlight__wrapper {
+    display:flex;
+    
+}
+
+.highlight {
+padding: 0 24px;
+width: calc(100% / 3);
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
+.highlight__para {
+    text-align: center;
+    max-width: 280px;
+}
+
+.highlight__img {
+    border: 2px solid #7341d65d;
+    color: #7342d6;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    font-size: 32px;
+    margin-bottom:  24px;
+}
+
+.highlight__subtitle {
+    font-size: 20px; 
+    margin-bottom: 16px;
+}
+
+/* FEATURES */
+
+#features {
+    height: 1000px;
+    background-color: rgba(115, 66, 214, 0.1);
+}
+
+
+
+/* 39:00 */
