--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     max-width: 100vw;
     overflow-x: hidden;
@@ -18,23 +22,27 @@ nav {
 
 img {
     width: 100%;
-    height: 100%;
-    max-height: 50vh;
-    padding: 20px
 }
+
 
 p {
     line-height: 1.5;
 }
 
-.nav__container {
-    width: 100%;
-    max-width: 1200px;
-    padding: 0 24px;
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline; 
+}
+
+ul {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0 auto;
+}
+
+li {
+    list-style-type: none;
 }
 
 .purple {
@@ -45,12 +53,14 @@ p {
     width: 160px;
 }
 
-ul {
+.nav__container {
+    width: 100%;
+    max-width: 1200px;
+    padding: 0 24px;
     display: flex;
-}
-
-li {
-    list-style-type: none;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 auto;
 }
 
 .nav__link {
@@ -74,6 +84,68 @@ li {
 .nav__link--primary:hover {
     text-decoration: none;
 }
+
+
+.btn__menu {
+    background-color: transparent;
+    font-size: 40px;
+    text-align: center;
+    border: none;
+    color: #7342d6;
+    display: none; 
+}
+
+.menu__backdrop {
+    position: absolute;
+    background-color: #242424;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 300ms ease;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.menu--open .menu__backdrop {
+    visibility: visible;
+    opacity: 1;
+}
+
+.menu--open {
+    max-height: 100vh; 
+    overflow-y: hidden;
+}
+
+.menu__links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.menu__list {
+    padding: 32px 0;
+}
+
+.menu__link {
+    font-size: 40px;
+    color: white;
+}
+
+.btn__menu--close {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    padding: 8px;
+    color: white;
+}
+
+
+/* LANDING */
 
 #landing {
     background-color: rgba(115, 66, 214, 0.1);
@@ -136,6 +208,10 @@ button:active {
     z-index: 2;
 }
 
+.header__img {
+    padding: 20px;
+}
+
 .container {
     padding: 56px 0;
 
@@ -148,44 +224,52 @@ button:active {
 
 }
 
+.row__column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.no-cursor {
+    cursor: not-allowed;
+}
+
 
 /* HIGHLIGHTS */
 
 #highlights {
     position: relative;
+    max-width: 100vw;
 }
 
-#highlights:before {
-    background: url('./assets/wave.svg');
-    position: absolute;
-    content: "";
-    width: 101vw;
-    height: 12vw;
-    top: 1px;
-    left: 0;
-    z-index: 1;
-    background-size: cover;
-    background-repeat: no-repeat;
-    transform: translateY(-100%);
-}
-
+#highlights:before,
 #highlights:after {
     background: url('./assets/wave.svg');
     position: absolute;
     content: "";
     width: 101vw;
     height: 12vw;
-    bottom: 1px;
     left: 0;
     z-index: 1;
     background-size: cover;
     background-repeat: no-repeat;
+}
+
+#highlights:before {
+
+    transform: translateY(-100%);
+    top: 1px;
+}
+
+#highlights:after {
+    bottom: 1px;
     transform: translateY(100%) rotate(180deg);
 }
 
 
 .highlight__wrapper {
     display:flex;
+    flex-wrap: wrap;
     
 }
 
@@ -218,15 +302,162 @@ align-items: center;
 .highlight__subtitle {
     font-size: 20px; 
     margin-bottom: 16px;
+    text-align: center;
 }
 
 /* FEATURES */
 
 #features {
-    height: 1000px;
+    padding-top: 8vw;
+    background-color: rgba(115, 66, 214, 0.1);
+}
+
+.books {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.book {
+    width: 25%;
+    padding: 24px;
+}
+
+.book__img {
+    max-height: 380px;
+    transition: all 300ms ease;
+    cursor: no-drop;
+}
+
+.book__img--wraper {
+    margin-bottom: 8px;
+    border-radius: 4px;
+    overflow: hidden;
+    display: flex;
+}
+
+.book:hover .book__img {
+    transform: scale(1.03);
+}
+
+.book__title {
+    font-size: 20px;
+    margin-bottom: 8px;
+}
+
+.book__title:hover {
+    text-decoration: underline;
+    cursor: no-drop;
+}
+
+.book__ratings {
+    margin-bottom: 8px;
+    color: #fabf2a;
+
+}
+
+.book__price--normal {
+    text-decoration: line-through;
+    padding-right: 6px;
+    color: #bfbfbf;
+}
+
+/* LATEST */
+
+#latest {
+    background-color: white);
+}
+
+.latest__books {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+/* EXPLORE */
+
+#explore {
     background-color: rgba(115, 66, 214, 0.1);
 }
 
 
+/* FOOTER */
 
-/* 39:00 */
+footer {
+    background-color: #242424;
+}
+
+.foter__logo {
+    display: flex;
+}
+
+.footer__logo--img {
+    width: 160px;
+    filter: grayscale(1) invert(1);
+}
+
+.footer__link,
+.footer__copyright {
+    color: white;
+}
+
+.footer__list {
+    margin: 20 0 24px 0;
+}
+
+.footer__link{
+    padding: 0 8px;
+}
+
+
+/* SMALL PHONES, TABLEST, LARGE SMARTPHONES */
+
+
+@media (max-width: 768px) {
+    .header__description {
+        padding: 0 24px;
+    }
+
+    h1 {
+        font-size: 40px;
+
+    }
+
+    h2 {
+        font-size: 26px;
+    }
+
+    button {
+        font-size: 18px;
+    }
+
+
+    .book {
+        width: 50%;
+    }
+
+}
+
+
+
+/* SMALL PHONES, LARGE SMARTPHONES */
+@media (max-width: 550px) {
+    .nav__links {
+        display: none;
+    }
+
+    .btn__menu {
+        display: block;
+    }
+
+    .highlight {
+        width: 100%;
+        margin-bottom: 24px;
+    }
+
+    .highlight:not(:last-child) {
+        margin-bottom: 24px;
+    }
+
+    
+}
+/* 57:00 */
