--- a/style.css
+++ b/style.css
@@ -45,8 +45,8 @@ li {
     list-style-type: none;
 }
 
-.purple {
-    color: #7342d6;   
+.orange {
+    color: #F98226;   
 }
 
 .logo {
@@ -67,7 +67,7 @@ li {
     margin-left: 16px;
     text-decoration: none;
     font-size: 20px;
-    color: #7342d6;
+    color: black;
     font-weight: bold;
     padding: 8px;
 }
@@ -77,7 +77,7 @@ li {
 }
 
 .nav__link--primary {
-    border: 2px solid #7342d6;
+    border: 2px solid #F98226;
     border-radius: 4px;
 }
 
@@ -91,7 +91,7 @@ li {
     font-size: 40px;
     text-align: center;
     border: none;
-    color: #7342d6;
+    color: #F98226;
     display: none; 
 }
 
@@ -148,7 +148,7 @@ li {
 /* LANDING */
 
 #landing {
-    background-color: rgba(115, 66, 214, 0.1);
+    background-color: #fbeec1;
 }
 
 header {
@@ -175,7 +175,7 @@ header {
 
 h1 {
     font-size: 56px;
-    color: #7342d6;
+    color: black;
     margin-bottom: 24px;
     text-align: center;
 
@@ -196,7 +196,7 @@ button:active {
 } 
 
 .btn {
-    background-color: #7342d6;
+    background-color: #F98226;
     color: white;
     padding: 12px 24px;
     border-radius: 4px;
@@ -210,6 +210,7 @@ button:active {
 
 .header__img {
     padding: 20px;
+    height:450px;
 }
 
 .container {
@@ -287,8 +288,8 @@ align-items: center;
 }
 
 .highlight__img {
-    border: 2px solid #7341d65d;
-    color: #7342d6;
+    border: 2px solid black;
+    color: #F98226;
     width: 100px;
     height: 100px;
     display: flex;
@@ -309,7 +310,7 @@ align-items: center;
 
 #features {
     padding-top: 8vw;
-    background-color: rgba(115, 66, 214, 0.1);
+    background-color: #fbeec1;
 }
 
 .books {
@@ -323,9 +324,11 @@ align-items: center;
 }
 
 .book__img {
+    margin-bottom: 12px;
     max-height: 380px;
     transition: all 300ms ease;
     cursor: no-drop;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.16);
 }
 
 .book__img--wraper {
@@ -376,7 +379,7 @@ align-items: center;
 /* EXPLORE */
 
 #explore {
-    background-color: rgba(115, 66, 214, 0.1);
+    background-color: #fbeec1;
 }
 
 
@@ -393,6 +396,7 @@ footer {
 .footer__logo--img {
     width: 160px;
     filter: grayscale(1) invert(1);
+    margin-bottom: 16px;
 }
 
 .footer__link,
